--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -358,7 +358,7 @@ jobs:
           name: Install nodejs 13.x
           command: |
             curl -fsSL https://deb.nodesource.com/setup_13.x | bash -
-            yum install -y nodejs
+            apt-get install -y nodejs
       - run:
           name: Run ansible smoke.yml
           command: |
