--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,9 +386,9 @@ jobs:
             if curl -s ${URL} | grep "Welcome"
             then
               # Change this to 0 after the job fails
-              return 0
+              exit 1
             else
-              return 1
+              exit 1
             fi
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
