--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -426,35 +426,39 @@ jobs:
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
-  # cleanup:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           aws --version
-  #           yum install -y curl tar gzip
-  #           yum install -y gcc-c++ make
-  #     - run:
-  #         name: Install nodejs 13.x
-  #         command: |
-  #           curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
-  #           yum install -y nodejs
-  #     - run:
-  #         name: Get old stack workflow id
-  #         command: |
-  #           # your code here
-  #           export OldWorkflowID="the id here"
-  #           export STACKS=[] #put the list of stacks here
-  #     - run:
-  #         name: Remove old stacks and files
-  #         command: |
-  #           if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-  #           then
-  #             # your code here
-  #           fi
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            aws --version
+            yum install -y curl tar gzip
+            yum install -y gcc-c++ make
+      - run:
+          name: Install nodejs 13.x
+          command: |
+            curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
+            yum install -y nodejs
+      - run:
+          name: Get old stack workflow id
+          command: |
+            export OldWorkflowID=bams-cwpi485wuh
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
+      - run:
+          name: Remove old stacks and files
+          command: |
+            if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
+            then
+              aws s3 rb "s3://udapeople-${OldWorkflowID}" --force --region us-east-1
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            else
+              echo Cannot cleanup
+            fi
 
 workflows:
   bams:
@@ -486,5 +490,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
