--- a/.circleci/ansible/node-exporter.yml
+++ b/.circleci/ansible/node-exporter.yml
@@ -1,5 +1,5 @@
 ---
-- name: 'configuration play.'
+- name: setup prometheus node_exporter playbook
   hosts: web
   user: ubuntu
   become: true
@@ -9,4 +9,4 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
   roles:
-    - configure-prometheus-node-exporter
+    - node-exporter
