--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,12 +197,19 @@ jobs:
             pip3 install --upgrade pip
             pip3 install awscli
       - run:
-          name: Configure server
+          name: Configure backend server
           command: |
             cd .circleci/ansible
             cat inventory
             ansible --version
             ansible-playbook -i inventory backend-server.yml -vv
+      - run:
+          name: Install node_exporter
+          command: |
+            cd .circleci/ansible
+            cat inventory
+            ansible --version
+            ansible-playbook -i inventory node-exporter.yml -vv
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
@@ -445,7 +452,7 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkflowID=bams-cwpi485wuh
+            export OldWorkflowID=cwpi485wuh
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
       - run:
@@ -453,11 +460,12 @@ jobs:
           command: |
             if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
             then
-              aws s3 rb "s3://udapeople-${OldWorkflowID}" --force --region us-east-1
+              echo ******* Delete pass *******
+              aws s3 rb "s3://bams-${OldWorkflowID}" --force --region us-east-1
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
-              echo Cannot cleanup
+              echo ******* Operation not successful *******
             fi
 
 workflows:
