fixing node_exporter job

--- a/.circleci/ansible/node-exporter.yml
+++ b/.circleci/ansible/node-exporter.yml
@@ -1,6 +1,6 @@
 ---
 - name: setup prometheus node_exporter playbook
-  hosts: prometheus
+  hosts: web
   user: ubuntu
   become: true
   gather_facts: false
