--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,7 +210,7 @@ jobs:
             cd .circleci/ansible
             cat inventory
             ansible --version
-            ansible-playbook -i node node-exporter.yml -vv
+            ansible-playbook -i inventory node-exporter.yml -vv
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
@@ -373,7 +373,7 @@ jobs:
           name: Run pm2 command on backend again
           command: |
             cd .circleci/ansible && ansible --version
-            ansible-playbook -i inventory smoke.yml -vv
+            ansible-playbook -i inventory pm2.yml -vv
       - run:
           name: Backend smoke test
           command: |
