--- a/.circleci/cloudformation/backend.yml
+++ b/.circleci/cloudformation/backend.yml
@@ -36,17 +36,17 @@ Resources:
       KeyName: !Ref KeyPair
       ImageId: !Ref ImageId
       # Block device mapping for EBS volumes
-      # BlockDeviceMappings:
-      #   - DeviceName: /dev/xvda
-      #     Ebs:
-      #       VolumeType: gp2
-      #       VolumeSize: '20'
-      #       DeleteOnTermination: 'true'
-      #       Encrypted: 'false'
-      # Block device mapping for instance store volumes
       BlockDeviceMappings:
-        - DeviceName: /dev/sdc
-          VirtualName: ephemeral0
+        - DeviceName: /dev/xvda
+          Ebs:
+            VolumeType: gp2
+            VolumeSize: '20'
+            DeleteOnTermination: 'true'
+            Encrypted: 'false'
+      # Block device mapping for instance store volumes
+      # BlockDeviceMappings:
+      #   - DeviceName: /dev/sdc
+      #     VirtualName: ephemeral0
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
