--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -458,6 +458,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            OldWorkflowID=cwpi485wuh
             export OldWorkflowID=cwpi485wuh
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
