--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,7 +379,7 @@ jobs:
             --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:8}" \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo $API_URL/api/status
+            echo $API_URL/api/status && sleep 5s
             if curl -s $API_URL/api/status | grep "ok"
             then
                 exit 0
@@ -470,6 +470,7 @@ jobs:
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
               echo ******* Operation not successful *******
+              exit 1
             fi
 
 workflows:
