putting finishing touches

--- a/.circleci/cloudformation/prometheus.yml
+++ b/.circleci/cloudformation/prometheus.yml
@@ -30,23 +30,32 @@ Resources:
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      InstanceType: t2.micro
+      InstanceType: t2.medium
       SecurityGroupIds:
         - Ref: SG
       KeyName: !Ref KeyPair
       ImageId: !Ref ImageId
       # Block device mapping for EBS volumes
-      BlockDeviceMappings:
-        - DeviceName: /dev/xvda
-          Ebs:
-            VolumeType: gp2
-            VolumeSize: '20'
-            DeleteOnTermination: 'true'
-            Encrypted: 'false'
+      # BlockDeviceMappings:
+      #   - DeviceName: /dev/sda1 #xvda
+      #     Ebs:
+      #       VolumeType: gp2
+      #       VolumeSize: '10'
+      #       DeleteOnTermination: 'true'
+      #       Encrypted: 'false'
       # Block device mapping for instance store volumes
       # BlockDeviceMappings:
       #   - DeviceName: /dev/sdc
       #     VirtualName: ephemeral0
+      #Linux UserData
+      # UserData:
+      #   Fn::Base64: !Sub |
+      #     #!/bin/bash
+      #     AWS_AVAIL_ZONE=$(curl http://169.254.169.254/latest/meta-data/placement/availability-zone)
+      #     AWS_REGION="`echo \"$AWS_AVAIL_ZONE\" | sed 's/[a-z]$//'`"
+      #     AWS_INSTANCE_ID=$(curl http://169.254.169.254/latest/meta-data/instance-id)
+      #     ROOT_VOLUME_IDS=$(aws ec2 describe-instances --region $AWS_REGION --instance-id $AWS_INSTANCE_ID --output text --query Reservations[0].Instances[0].BlockDeviceMappings[0].Ebs.VolumeId)
+      #     aws ec2 create-tags --resources $ROOT_VOLUME_IDS --region $AWS_REGION --tags Key=Name,Value=!Sub bams-${ID}
       Tags:
         - Key: Name
           Value: !Sub bams-${ID}
