--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -452,22 +452,27 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkflowID=cwpi485wuh
+            # Fetch the Old workflow ID
+            export OldWorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
       - run:
           name: Remove old stacks and files
           command: |
-            OldWorkflowID=cwpi485wuh
-            export OldWorkflowID=cwpi485wuh
+            # Fetch the Old workflow ID
+            export OldWorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
             then
               echo ******* Delete pass *******
-              aws s3 rb s3://udapeople-${OldWorkflowID} --force
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              aws s3 rb s3://${OldWorkflowID} --force
+              aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+              aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
               echo ******* Operation not successful *******
               exit 1
