fixing cleanup job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,6 +335,11 @@ jobs:
             ansible --version
             ansible-playbook backend-app.yml --syntax-check
             ansible-playbook -i inventory backend-app.yml -vv
+      - run:
+          name: Run pm2 command on backend again
+          command: |
+            cd .circleci/ansible && ansible --version
+            ansible-playbook -i inventory pm2.yml -vv
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
       - revert_migrations:
@@ -365,11 +370,6 @@ jobs:
           command: |
             curl -fsSL https://deb.nodesource.com/setup_13.x | bash -
             apt-get install -y nodejs
-      - run:
-          name: Run pm2 command on backend again
-          command: |
-            cd .circleci/ansible && ansible --version
-            ansible-playbook -i inventory pm2.yml -vv
       - run:
           name: Backend smoke test
           command: |
@@ -443,7 +443,6 @@ jobs:
           command: |
             aws --version
             yum install -y curl tar gzip
-            yum install -y gcc-c++ make
       - run:
           name: Install nodejs 13.x
           command: |
@@ -462,15 +461,13 @@ jobs:
           name: Remove old stacks and files
           command: |
             # Fetch the Old workflow ID
-            export OldWorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
+            export OldWorkflowID=udapeople-cwpi485wuh
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
             then
               echo ******* Delete pass *******
-              aws s3 rb s3://${OldWorkflowID} --force
+              aws s3 rm "s3://${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
               aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
