--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,11 +335,6 @@ jobs:
             ansible --version
             ansible-playbook backend-app.yml --syntax-check
             ansible-playbook -i inventory backend-app.yml -vv
-      - run:
-          name: Run pm2 command on backend again
-          command: |
-            cd .circleci/ansible && ansible --version
-            ansible-playbook -i inventory pm2.yml -vv
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
       - revert_migrations:
@@ -371,13 +366,18 @@ jobs:
             curl -fsSL https://deb.nodesource.com/setup_13.x | bash -
             apt-get install -y nodejs
       - run:
+          name: Run pm2 command on backend again
+          command: |
+            cd .circleci/ansible && ansible --version
+            ansible-playbook -i inventory pm2.yml -vv
+      - run:
           name: Backend smoke test
           command: |
             # Fetch and prepare the BACKEND_IP env var
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:8}" \
-            --output text)
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:8}" \
+              --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo $API_URL/api/status && sleep 10s
             if curl -s $API_URL/api/status | grep "ok"
@@ -420,6 +420,18 @@ jobs:
             curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
             yum install -y nodejs
       - run:
+          name: Get current wrkflow ID before switching
+          command: |
+            # Fetch the Old workflow ID
+            aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text >> .circleci/ansible/inventory
+      - run: cat workflowid.txt
+      - persist_to_workspace:
+          root: .
+          paths:
+            - workflowid.txt
+      - run:
           name: Update cloudfront distribution
           command: |
             # Change the initial stack name, as applicable to you
@@ -448,28 +460,28 @@ jobs:
           command: |
             curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
             yum install -y nodejs
+      - attach_workspace:
+          at: .
       - run:
           name: Get old stack workflow id
           command: |
             # Fetch the Old workflow ID
-            export OldWorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
+            export OldWorkflowID=$(cat workflowid.txt)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
       - run:
           name: Remove old stacks and files
           command: |
             # Fetch the Old workflow ID
-            export OldWorkflowID=udapeople-cwpi485wuh
+            export OldWorkflowID=$(cat workflowid.txt)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
             then
               echo ******* Delete pass *******
-              aws s3 rm "s3://${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
-              aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              #aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+              #aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
               echo ******* Operation not successful *******
               exit 1
