--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -478,12 +478,12 @@ jobs:
             echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
             then
-              echo ******* Delete pass *******
+              echo "******* Delete pass *******"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              #aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
-              #aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
-              echo ******* Operation not successful *******
+              echo '******* Operation not successful *******'
               exit 1
             fi
 
