--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,7 +379,8 @@ jobs:
               --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:8}" \
               --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo $API_URL/api/status && sleep 10s
+            curl $API_URL/api/status && sleep 10s
+            curl $API_URL/api/status 
             if curl -s $API_URL/api/status | grep "ok"
             then
                 exit 0
@@ -425,7 +426,7 @@ jobs:
             # Fetch the Old workflow ID
             aws cloudformation \
               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text >> .circleci/ansible/inventory
+              --no-paginate --output text >> workflowid.txt
       - run: cat workflowid.txt
       - persist_to_workspace:
           root: .
