--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -469,18 +469,18 @@ jobs:
             # Fetch the Old workflow ID
             export OldWorkflowID=$(cat workflowid.txt)
             echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
+            echo CurrentWorkflowID: "${CIRCLE_WORKFLOW_ID:0:8}"
       - run:
           name: Remove old stacks and files
           command: |
             # Fetch the Old workflow ID
             export OldWorkflowID=$(cat workflowid.txt)
             echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:8}"
-            if [[ "${CIRCLE_WORKFLOW_ID:0:8}" =~ "${OldWorkflowID}" ]]
+            echo CurrentWorkflowID: "${CIRCLE_WORKFLOW_ID:0:8}"
+            if [[ "${CurrentWorkflowID}" != "${OldWorkflowID}" ]]
             then
               echo "******* Delete pass *******"
-              aws s3 rb s3://udapeople-${OldWorkflowID} --force
+              aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
               aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
