--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -487,7 +487,7 @@ jobs:
               echo '******* Operation not successful *******'
               exit 1
             fi
-
+          #it is finished!
 workflows:
   bams:
     jobs:
