--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,7 +439,7 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/cloudformation/cloudfront.yml \
               --stack-name bams-cloudfront \
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:8}" \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:8}" \
               --tags project=bams
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
